added artile short hasing (more work required) need to remove slideout.js due to legacy
