# App/2.Application/Server/Lib/Services/ArticleTree/Article.ts
@@ -6,4 +6,5 @@ export class Article implements IArticle {
     public path:string;
     public metaHeader:IMetaHeader;
     public hash:string;
+    public shortId:string;
 }
